--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: '1.20'
 
       - name: Build
-        run: go build -v ...
+        run: go build -v prodi/...
 
       - name: Test
-        run: go test -v -race ...
+        run: go test -v -race prodi/...
