--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: '1.20'
 
       - name: Build
-        run: go build -v prodi/...
+        run: go build -o bin/ -v prodi/...
 
       - name: Test
         run: go test -v -race prodi/...
