--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Go package
 
 on: [push]
+permissions:
+    contents: read
 
 jobs:
   list-manifests:
@@ -26,7 +28,7 @@ jobs:
           # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
           # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
           version: v1.53
-          args: --config ./.github/golangci.yml ${{needs.list-manifests.outputs.locs}}
+          args: ${{needs.list-manifests.outputs.locs}}
   go-build:
     needs: list-manifests
     runs-on: ubuntu-latest
