--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,7 +21,7 @@ linters:
   # Default: false
   fast: true
   disable:
-    - gci
-    - gofmt
-    - goimports
+    #- gci
+    #- gofmt
+    #- goimports
 skip-cache: true
